--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -116,11 +116,22 @@
         android:title="@string/set_force_touch"
         android:persistent="false"
         android:summary="@string/set_force_touch_sum"/>
-   <!-- <CheckBoxPreference
+<!--
+    <CheckBoxPreference
         android:key="button_turn_silence"
         android:title="@string/turn_silence"
         android:persistent="false"
-        android:summary="@string/turn_silence_sum"/> -->
+        android:summary="@string/turn_silence_sum"/>
+     -->
+    <CheckBoxPreference
+        android:key="pref_flipping_mutes_ringer"
+        android:title="@string/pref_flipping_down_mutes_ringer_title"
+        android:persistent="false"
+        android:summary="@string/pref_flipping_down_mutes_ringer_title"/>
+    <CheckBoxPreference android:key="pref_call_me_louder"
+        android:title="@string/pref_call_me_louder_title" 
+        android:persistent="false"
+        android:summary="@string/pref_call_me_louder_summary"/>
     <CheckBoxPreference
         android:key="button_left_hand"
         android:title="@string/left_hand"
